# rkvs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  common.rs  error.rs  kv.rs  lib.rs  server.rs
src/engines/: kvs.rs  mod.rs  sled.rs
tests/: kv_store.rs  tests.rs
