[package]
name = "kvs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.0"
predicates = "2.0.2"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
tempfile = "3.2.0"
walkdir = "2.3.2"
clap = "2.33.3"
