[package]
name = "kvs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.1"
clap = "2.33.3"
criterion = "0.3.5"
env_logger = "0.9.0"
log = "0.4.14"
predicates = "2.0.2"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sled = "0.34.7"
structopt = "0.3.23"
tempfile = "3.2.0"
walkdir = "2.3.2"
